<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/restaurant_image_view"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_arrow_white_24dp"
            android:contentDescription="Back" />

    </RelativeLayout>

    <TextView
        android:id="@+id/categories_restaurant_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="Menu"
        android:textAppearance="@android:style/TextAppearance.Material.Title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categories_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>