...
            android:layout_height="30dp"
            android:text="1"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/plus_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/round_button"
            android:text="+"
            android:textColor="#FFF"
            android:textSize="16sp" />
...
