...
            android:layout_marginLeft="10dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/ic_arrow_white_24dp"/>

        <TextView
            android:id="@+id/bucket_textview"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_rect_white"
...
